Fix Webkit review comments for document.createTouch

See WebKit bug https://bugs.webkit.org/show_bug.cgi?id=47676
for details.

Change-Id: I232445c78d59ed3d13c9bcd86b9fa9590ffae552